corrected hero alignment

--- a/bug-hunter/resources/css/app.css
+++ b/bug-hunter/resources/css/app.css
@@ -1,7 +1,7 @@
 body {
     background-color: white;
     color: #333333;
-    padding: 35px;
+    padding: 0;
     margin: 0;
     font-family:'Courier New', Courier, monospace;
     font-size: 20px;
